Basic Sign Up form added with form - styling needs updating

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,57 @@
     text-align: center;
     padding:10px;
 }
+
+
+
+
+
+
+.form-signup{
+    color:#6b6b69;
+}
+
+.form-signup label{
+    font-size:20px;
+    text-transform: uppercase;
+}
+
+.form-signup input{
+    background-color: rgb(238, 136, 20, 0.5);
+    border:1px solid #6b6b69;
+}
+
+.form-login{
+    color:#6b6b69;
+}
+
+.form-login label{
+    font-size:20px;
+    text-transform: uppercase;
+}
+
+.form-login input{
+    background-color: rgb(238, 136, 20, 0.5);
+    border:1px solid #6b6b69;
+}
+
+.submit-btn{
+    background-color: rgb(238, 136, 20, 0.6);
+    border:0px;
+    color:#6b6b69;
+    text-transform: uppercase;
+    font-weight: 600;
+
+}
+
+.submit-btn:hover{
+    background-color: #6b6b69;
+    color:rgb(238, 136, 20);
+}
+
+.question{
+    padding-top:20px;
+    text-transform: uppercase;
+    color:#6b6b69;
+    font-weight: 500;
+}
